# homeWorkQt

./: .gitignore  README.md
lesson_1/build-task_1-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
lesson_1/build-task_1-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
lesson_1/build-task_1-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
lesson_1/build-task_1-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/task_1_autogen/: deps
lesson_1/build-task_1-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/task_1_autogen/EWIEGA46WW/: moc_mainwindow.cpp  (+1 more)
lesson_1/task_1/: .gitignore  CMakeLists.txt  main.cpp  mainwindow.ui
lesson_2/Qt_modules/: .gitignore  CMakeLists.txt  main.cpp
lesson_3/HomeWorkQtDesigner/: CMakeLists.txt  dialogconnectbd.cpp  dialogconnectbd.h  dialogconnectbd.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
lesson_4/Task_1/qt_widgets/: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
lesson_5/QtTimer/: .gitignore  CMakeLists.txt  Fonts.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  qttimer.cpp  qttimer.h  stopwatch.cpp  stopwatch.h
lesson_6/task_1/: ExampleRace.h  mainwindow.cpp  mainwindow.h
lesson_7/task/: CMakeLists.txt  Grafic.ui  graphics.cpp  graphics.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
lesson_8/: CMakeLists.txt  database.cpp  database.h  dbdata.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
lesson_8/V2/dataBaseQt/: CMakeLists.txt  database.cpp  database.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
(+12 files in other folders)
